--- a/views/ESN Directory.html
+++ b/views/ESN Directory.html
@@ -368,7 +368,7 @@
           const roomName = [data.sender, data.receiver].sort().join('_')
           console.log('currentUser.chatChecked', currentUser.chatChecked)
           console.log('roomName', roomName)
-          if (currentUser.chatChecked[roomName] !== undefined && data.receiver === username) {
+          if (currentUser.chatChecked[roomName] !== undefined && data.receiver === localStorage.getItem('username')) {
             currentUser.chatChecked[roomName] = data.checked
             localStorage.setItem('currentUser', JSON.stringify(currentUser))
             console.log('currentUser.chatChecked2', localStorage.getItem('currentUser').chatChecked)
