--- a/views/ESN_Directory.html
+++ b/views/ESN_Directory.html
@@ -228,7 +228,7 @@
       //   e.preventDefault();
       //   socket.connect();
       // });
-      const socket = io('https://s24esnb2.onrender.com', {
+      const socket = io('http://localhost:3000', {
         query: {
           token: localStorage.getItem('token'),
         },
@@ -365,19 +365,30 @@
         })
 
         socket.on('alertUpdated', (data) => {
-          const roomName = [data.sender, data.receiver].sort().join('_')
-          console.log('currentUser.chatChecked', currentUser.chatChecked)
-          console.log('roomName', roomName)
-          if (currentUser.chatChecked[roomName] !== undefined && data.receiver === localStorage.getItem('username')) {
-            currentUser.chatChecked[roomName] = data.checked
-            localStorage.setItem('currentUser', JSON.stringify(currentUser))
-            console.log('currentUser.chatChecked2', localStorage.getItem('currentUser').chatChecked)
-            displayUsers(users, currentUser)
+          const roomName = [data.sender, data.receiver].sort().join('_');
+        if(currentUser.chatChecked[roomName]!==undefined) {
+          if (data.checked) {
+            if (data.sender === currentUser.username) {
+              currentUser.chatChecked[roomName] = data.checked
+            }
           }
-        })
+          else{
+            if (data.receiver === currentUser.username) {
+              currentUser.chatChecked[roomName] = data.checked
+            }
+          }
+          localStorage.setItem('currentUser', JSON.stringify(currentUser))
+          displayUsers(users, currentUser)
+        }
+      })
+      
+      
+      
       })
 
+      
       function displayUsers(users, currentUser) {
+        
         const userList = document.getElementById('userList')
         userList.innerHTML = '' // Clear existing list
 
